--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ tools/assimp_qt_viewer/moc_glview.cpp_parameters
 tools/assimp_qt_viewer/moc_mainwindow.cpp
 tools/assimp_qt_viewer/moc_mainwindow.cpp_parameters
 tools/assimp_qt_viewer/ui_mainwindow.h
+
+# build output and intermediates
+bin/
+bin-int/
