--- a/revision.h.in
+++ b/revision.h.in
@@ -1,7 +1,10 @@
 #ifndef ASSIMP_REVISION_H_INC
 #define ASSIMP_REVISION_H_INC
 
-#define GitVersion 0x@GIT_COMMIT_HASH@
-#define GitBranch "@GIT_BRANCH@"
+// TODO: have a look at how you would get this values from premake
+// TODO: and how to generate a .h file from this .in one
+// TODO: https://github.com/premake/premake-core/wiki/Generating-Project-Files
+#define GitVersion 0
+#define GitBranch "branch"
 
 #endif // ASSIMP_REVISION_H_INC
